tests/negative/parser/err_invalid_token.ual
-- Parser error test: invalid token
@stack = stack.new(i64)
@stack push(###invalid###)
